<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.edit.EditSettingsActivity">

    <EditText
        android:id="@+id/edit_quiz_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        android:hint="@string/edit_quiz_title"
        android:imeOptions="actionDone"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/edit_language_selection"
        android:inputType="text" />

    <CheckBox
        android:id="@+id/treasure_hunt_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/regular_padding"
        android:text="@string/treasure_hunt"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_quiz_title"
        />

    <Spinner
        android:id="@+id/edit_language_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/languages_list"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@id/button_start_editing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/treasure_hunt_checkbox" />

    <Button
        android:id="@+id/button_start_editing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@color/colorAccent"
        android:textColor="@color/colorPrimary"
        android:text="@string/button_start_editing_message"
        android:textStyle="bold"
        android:onClick="startEditing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_language_selection" />

</androidx.constraintlayout.widget.ConstraintLayout>