...
    <string name="treasure_hunt_start">Start the treasure hunt</string>
    <string name="treasure_hunt_confirm_next_question">Are you sure that you finished this question ? You will not be able to come back to it.</string>
    <string name="question_locator_move">Move to next question</string>

    <!-- Edit Settings -->
    <string name="edit_dialog_title_settings">Settings</string>
    <string name="edit_quiz_title">Title</string>
    <string name="button_start_editing_message">Start editing</string>

    <!-- Edit -->
    <string name="dup_quiz_name_error">A quiz with the same name already exists</string>
    <string name="empty_quiz_name_error">Please enter the name of your quiz</string>
    <string name="cancel">Cancel</string>
...
