...
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:freezesText="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/question_locator_text1"
        app:layout_constraintBottom_toTopOf="@id/question_locator_button" />

    <Button style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/question_locator_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:freezesText="true"
...
